[package]
name = "leandown"
version = "0.1.0"
edition = "2021"
description = "Convert annotated Lean 4 files to a static website"

[[bin]]
name = "leandown"
path = "src/main.rs"

[dependencies]
clap        = { version = "4.5",  features = ["derive"] }
toml        = "0.8"
serde       = { version = "1.0",  features = ["derive"] }
html-escape = "0.2"
regex       = "1.11"
once_cell   = "1.20"
notify      = "6.1"
tiny_http   = "0.12"
walkdir     = "2.5"
indexmap    = "2.7"
anyhow      = "1.0"

[profile.release]
strip = true
lto   = true
